--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-boiler",
+  "name": "uiechimp",
   "version": "1.0.0",
   "description": "",
   "main": "./build/bundle.js",
@@ -17,6 +17,7 @@
     "babel-preset-stage-0": "^6.16.0",
     "css-loader": "^0.23.1",
     "node-sass": "^3.7.0",
+    "normalize.css": "^5.0.0",
     "react-redux": "^4.4.5",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
