--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./build/bundle.js",
   "scripts": {
-    "start": "webpack-dev-server --hot --inline",
+    "start": "webpack-dev-server --content-base ./build --hot --inline",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "craigmd",
@@ -16,6 +16,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.16.0",
     "css-loader": "^0.23.1",
+    "dotenv-webpack": "^1.3.1",
     "node-sass": "^3.7.0",
     "normalize.css": "^5.0.0",
     "react-redux": "^4.4.5",
@@ -25,6 +26,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "fixed-data-table": "^0.6.3",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^2.8.1",
