--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "css-loader": "^0.23.1",
     "dotenv-webpack": "^1.3.1",
     "node-sass": "^3.7.0",
-    "normalize.css": "^5.0.0",
     "react-redux": "^4.4.5",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
@@ -26,7 +25,8 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "fixed-data-table": "^0.6.3",
+    "fixed-data-table-2": "^0.7.6",
+    "normalize.css": "^5.0.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^2.8.1",
