--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "express": "^4.14.0",
     "fixed-data-table-2": "^0.7.6",
+    "node-fetch": "^1.6.3",
     "normalize.css": "^5.0.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
