--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "./build/bundle.js",
   "scripts": {
-    "build": "NODE_ENV=production webpack -p --progress --config ./webpack.production.config.js",
-    "start": "webpack-dev-server --content-base ./build --hot --inline",
+    "production": "NODE_ENV=production webpack --progress -p",
+    "start": "NODE_ENV=development webpack-dev-server --content-base ./build --hot --inline",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "craigmd",
@@ -13,6 +13,7 @@
   "devDependencies": {
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.16.0",
@@ -26,6 +27,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "fixed-data-table-2": "^0.7.6",
     "node-fetch": "^1.6.3",
