--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "fixed-data-table-2": "^0.7.6",
+    "lodash": "^4.16.4",
     "node-fetch": "^1.6.3",
     "normalize.css": "^5.0.0",
     "react": "^15.3.2",
