--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^2.8.1",
+    "react-tooltip": "^3.2.1",
     "redux": "^3.6.0",
     "whatwg-fetch": "^1.0.0"
   }
